--- a/Music Advisor/Rocking OAuth/task-info.yaml
+++ b/Music Advisor/Rocking OAuth/task-info.yaml
@@ -129,5 +129,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/62/stages/336/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 03 Mar 2021 04:36:44 UTC
+record: 2
