added server authorization

--- a/Music Advisor/Useful connections/task-info.yaml
+++ b/Music Advisor/Useful connections/task-info.yaml
@@ -303,6 +303,18 @@ files:
         }
     }
   learner_created: false
+- name: src/advisor/Controller.java
+  visible: true
+  learner_created: true
+- name: src/advisor/Config.java
+  visible: true
+  learner_created: true
+- name: src/advisor/Authorization.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/62/stages/337/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 04 Mar 2021 00:24:58 UTC
 record: -1
