--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,17 +3,17 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/210107/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Wed, 03 Mar 2021 23:37:48 UTC
 stages:
 - id: 335
   step: 5477
   is_completed: true
 - id: 336
   step: 5478
-  is_completed: false
+  is_completed: true
 - id: 337
   step: 5479
-  is_completed: false
+  is_completed: true
 - id: 338
   step: 5480
   is_completed: false
