--- a/Music Advisor/Processing links/task-info.yaml
+++ b/Music Advisor/Processing links/task-info.yaml
@@ -1068,7 +1068,16 @@ files:
         }
     }
   learner_created: true
-- name: src/GetNew.java
+- name: src/advisor/GetNew.java
+  visible: true
+  learner_created: true
+- name: src/advisor/GetRequest.java
+  visible: true
+  learner_created: true
+- name: src/advisor/GetFeatured.java
+  visible: true
+  learner_created: true
+- name: src/advisor/SpotifyBeans.java
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/projects/62/stages/338/implement#comment
